<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.costax</groupId>
    <artifactId>hibernate-tunings</artifactId>
    <version>1.1-SNAPSHOT</version>

    <name>JPA and Hibernate turning</name>
    <description>JPA and Hibernate Turning and Tips.</description>

    <developers>
        <developer>
            <id>costajlmpp</id>
            <name>Joao Costa</name>
            <email>costajlmpp@gmail.com</email>
            <url>https://costajlmpp.wordpress.com/</url>
            <timezone>0</timezone>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/jlmc/hibernate-tunings</url>
        <connection>scm:git:git://github.com/jlmc/hibernate-tunings.git</connection>
        <developerConnection>scm:git:git@github.com:jlmc/hibernate-tunings.git</developerConnection>
    </scm>

    <modules>
        <module>database-migrations</module>
        <module>helpers</module>
        <module>hibernate-tuning-howtos</module>
        <module>logging-sql-statements</module>
        <!--module>schema-management</module-->
        <module>connection-manager</module>
        <module>connection-lifecycle</module>
        <module>types</module>
        <module>Identifiers</module>
        <module>advanced-topics</module>
        <module>bytecode-enhancement-dirty-checking</module>
        <module>caches</module>
        <module>cache2ndee</module>
        <module>bulk-operations</module>
        <module>batching-of-write-operations</module>
        <module>concurrency</module>
        <module>fetching</module>
        <module>relationships</module>
        <module>bean-validation</module>
        <module>mapping-blobs-and-clobs</module>
        <module>instrumentation</module>
        <module>advanced-topics-two</module>
        <module>hibernate-5-naming-strategies</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <java.version>14</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <failOnMissingWebXml>false</failOnMissingWebXml>

        <!-- dependencies versions-->
        <hibernate.version>5.4.14.Final</hibernate.version>
        <!--hibernate.version>5.4.12.Final</hibernate.version-->
        <!--hibernate.version>5.4.4.Final</hibernate.version-->
        <!--<hibernate.version>5.4.2.Final</hibernate.version>-->
        <!--<hibernate.version>5.4.0.Final</hibernate.version>-->
        <!--<hibernate.version>5.3.6.Final</hibernate.version>-->
        <!--hibernate.version>5.2.17.Final</hibernate.version-->
        <hibernate-validator.version>6.1.3.Final</hibernate-validator.version>
        <!--hibernate-validator.version>6.1.2.Final</hibernate-validator.version-->
        <!--hibernate-validator.version>6.1.0.Final</hibernate-validator.version-->
        <postgresql.version>42.2.1</postgresql.version>
        <!--postgresql.version>9.4.1208</postgresql.version-->
        <oracle.version>12.2.0.1</oracle.version>
        <!--<oracle.version>11.2.0.4</oracle.version>-->
        <mysql.version>6.0.6</mysql.version>
        <mariadb.version>2.2.3</mariadb.version>
        <mssql.version>6.4.0.jre8</mssql.version>
        <jtds.version>1.3.1</jtds.version>
        <slf4j.version>1.7.7</slf4j.version>
        <hikari.version>1.3.3</hikari.version>
        <spring.version>4.3.3.RELEASE</spring.version>
        <!--jackson.version>2.7.4</jackson.version-->
        <jackson.version>2.9.10.3</jackson.version>
        <flyway.version>6.3.1</flyway.version>
        <!--flyway.version>5.2.4</flyway.version-->
        <!-- <flyway.version>3.2.1</flyway.version>-->
        <aspectj.version>1.8.7</aspectj.version>
        <h2.version>1.4.200</h2.version>
        <junit.version>4.12</junit.version>

        <hibernate-types-52.version>2.3.3</hibernate-types-52.version>
        <surefire-failsafe.version>3.0.0-M4</surefire-failsafe.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>javax.persistence</groupId>
                <artifactId>javax.persistence-api</artifactId>
                <version>2.2</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <!--Generates the jpa Metadata Model, very useful in building and maintaining and JPA Criteria Queries-->
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-jpamodelgen</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-testing</artifactId>
                <version>${hibernate.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-c3p0</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>javax.el</artifactId>
                <version>3.0.1-b09</version>
            </dependency>

            <!-- using with JDK 11 -->
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>2.3.0</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>2.3.0.1</version>
            </dependency>

            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-hikaricp</artifactId>
                <version>${hibernate.version}</version>
            </dependency>

            <!-- For hibernate-types-52 we need also to use the jackson dependency -->
            <dependency>
                <groupId>com.vladmihalcea</groupId>
                <artifactId>hibernate-types-52</artifactId>
                <version>${hibernate-types-52.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
                <scope>provided</scope>
                <optional>true</optional>
            </dependency>
            <!-- -->

            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-maven-plugin</artifactId>
                <version>${flyway.version}</version>
            </dependency>

            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>1.2.17</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>1.7.30</version>
            </dependency>
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>2.6.1</version>
            </dependency>
            <dependency>
                <groupId>p6spy</groupId>
                <artifactId>p6spy</artifactId>
                <version>3.0.0</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>1.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.costax</groupId>
                <artifactId>helpers</artifactId>
                <version>${project.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!--
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${hibernate.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>2.3.0.1</version>
        </dependency>
    </dependencies>
    -->

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>${java.version}</release>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>UTF-8</encoding>
                        <compilerArgs>--enable-preview</compilerArgs>
                        <!--
                        <annotationProcessorPaths>
                            Hibernate - Metamodel Generator:
                            https://docs.jboss.org/hibernate/orm/5.4/topical/html_single/metamodelgen/MetamodelGenerator.html
                            <path>
                                <groupId>org.hibernate</groupId>
                                <artifactId>hibernate-jpamodelgen</artifactId>
                                <version>${hibernate.version}</version>
                            </path>
                        </annotationProcessorPaths>
                        -->
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-failsafe.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${surefire-failsafe.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>

                <plugin>
                    <!-- Hibernate Bytecode Enhancement:
                    https://docs.jboss.org/hibernate/orm/5.0/topical/html/bytecode/BytecodeEnhancement.html -->
                    <groupId>org.hibernate.orm.tooling</groupId>
                    <artifactId>hibernate-enhance-maven-plugin</artifactId>
                    <version>${hibernate.version}</version>
                    <!--
                    <executions>
                        <execution>
                            <configuration>
                                <failOnError>true</failOnError>
                                <enableLazyInitialization>true</enableLazyInitialization>
                                <enableDirtyTracking>true</enableDirtyTracking>
                                <enableAssociationManagement>true</enableAssociationManagement>
                                <enableExtendedEnhancement>false</enableExtendedEnhancement>
                            </configuration>
                            <goals>
                                <goal>enhance</goal>
                            </goals>
                        </execution>
                    </executions>
                    -->
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <!--
                     <compilerArguments>
                        <AaddGeneratedAnnotation>false</AaddGeneratedAnnotation>
                        <Adebug>true</Adebug>
                    </compilerArguments>
                    <annotationProcessorPaths>
                        Hibernate - Metamodel Generator:
                        https://docs.jboss.org/hibernate/orm/5.4/topical/html_single/metamodelgen/MetamodelGenerator.html
                        <path>
                            <groupId>org.hibernate</groupId>
                            <artifactId>hibernate-jpamodelgen</artifactId>
                            <version>${hibernate.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    -->
                </configuration>
            </plugin>
            <!--
              Test configurations
             -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>